assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Unica+One&family=Vollkorn&display=swap');

/* Color palette vimeo blue #19B7EA, black #000000, artichoke #89937C,  flame #EC4E20, */

* {
    margin: 0;
    padding: 0%;
    border: none;
    background-color: black;
    color: #89937C;
}

h1, h2, h3, #menu li a {
    font-family: Unica One, sans-serif;
} 

p {
    font-family: Vollkorn, sans-serif;
}

hr {
    color: #89937C;
}
/* Header, title and navbar */

#page-name {
    float: left;
    margin-left: 20px;
}

#header-icons li {
    list-style-type: none;
    float: right;
    margin-right: 20px;
    margin-left: 20px;
    font-size: 110%;
} 

#upper-header {
    line-height: 55px;
    height: 10%;
}

#lower-header {
    clear: both;
    line-height: 10%;  
}

#sub-name {
    float: left;
    padding-left: 20px;
}

#menu li {
    list-style-type: none;
    float: right;
    padding-right: 20px;
}

#menu a {
    border-bottom: 1px solid black;
}

#menu a:hover {
    color:#19B7EA;
    border-bottom: 1px solid #19B7EA;
}

#header-icons i:hover {
    color: #19B7EA;
}

#header-icons li a, #menu li a {
    text-decoration: none;
    color: inherit;
}

#menu li .active {
    border-bottom: 1px solid #19B7EA; 
}

/* showreel section */

#showreel-wrapper {
    padding-top: 20px;
}

#showreel-hero {
    width: 100%;
    height: 750px;
}

/* bio and headshot */

#bio {
    width: 45vw;
    border: 0px;
    float: left;
    padding-top: 50px;
}

#bio p, #bio h3 {
    text-align: justify;
    padding-top: 10px;
    padding-left: 20px;
}

#headshot {
    width: 50vw;
    float: right;
    padding-right: 20px;
}

/* footer */

footer {
    clear: both;
    height: 100px;
    border: 0px;
}

#footer-icons {
    list-style-type: none;
    text-align: center;
    width: 33vw;
    padding-top: 50px;
}

#footer-icons li {
    display: inline;
    text-align: center;
    font-size: 150%;
    letter-spacing: 5px;
    padding: 5%;
}

#footer-icons li a {
    text-decoration: none;
}

#footer-icons i:hover {
    color:#19B7EA;
}

#footer {
    padding-left: 33vw;
    padding-right: 33vw;
    /* border: 0px; */
}

/* contact page */

#contact-hero-wrapper {
    padding-top: 20px;
    height: 600px;
    width: 100%;
}

#contact-hero-image {
    background: url(/assets/images/edited_sos_5.png) no-repeat center center;
    height: 600px;
    width: 100%;
}

#contact-daragh {
    font-size: 100%; 
}

#contact-daragh { 
    width: 45vw;
    border: 1px solid black;
    float: left;
    padding-top: 50px;
    padding-left: 20px;
}

#contact-daragh ul, #contact-daragh h2 {
    text-align: justify;
    padding-top: 10px;
}

#contact-daragh ul {
    list-style: none;
}

#contact-daragh li {
    margin-bottom: 20px;
}

#contacts-headshot  {
    width: 50vw;
    float: right;
    padding-right: 20px;
    padding-top: 15px;
}

/* projects page / filmography.html */

#project-hero-wrapper {
    padding-top: 20px;
    height: 600px;
    width: 100%;
}

#projects-hero-image {
    background: url(/assets/images/edited_ragin_1.jpg) no-repeat center center;
    height: 600px;
    width: 100%;
}

.projects h2, .projects h3 {
    text-align: center;
}

.projects iframe {
    height:500px;
    width: 100%;  
}

.projects-iframe-wrapper {
    padding: 50x 0px;
}


/*
EXAMPLE TO REFERE TO, DELETE BEFORE SUBMISSION
#showreel-wrapper {
    padding-top: 20px;
}

#showreel-hero {
    width: 100%;
    height: 750px;
} */

